--- a/src/styles/Account.scss
+++ b/src/styles/Account.scss
@@ -18,17 +18,20 @@
     display: none;
 }
 
+.title {
+    font-size: var(--lg);
+    margin-bottom: 36px;
+    text-align: start;
+}
+
 .form {
     display: flex;
     flex-direction: column;
 }
 
-.form a {
-    color: var(--hospital-green);
-    font-size: var(--sm);
-    text-align: center;
-    text-decoration: none;
-    margin-bottom: 52px;
+.form div {
+    display: flex;
+    flex-direction: column;
 }
 
 .label {
@@ -37,30 +40,10 @@
     margin-bottom: 4px;
 }
 
-.input {
-    background-color: var(--text-input-field);
-    border: none;
-    border-radius: 8px;
-    height: 30px;
+.value {
+    color: var(--very-light-pink);
     font-size: var(--md);
-    padding: 6px;
-    margin-bottom: 12px;
-}
-
-.input-email {
-    margin-bottom: 22px;
-}
-
-.primary-button {
-    background-color: var(--hospital-green);
-    border-radius: 8px;
-    border: none;
-    color: var(--white);
-    width: 100%;
-    cursor: pointer;
-    font-size: var(--md);
-    font-weight: bold;
-    height: 50px;
+    margin: 8px 0 32px 0;
 }
 
 .secondary-button {
@@ -81,7 +64,12 @@
 }
 
 @media (max-width: 640px) {
-    .logo {
-        display: block;
+    .form-container {
+        height: 100%;
+    }
+
+    .form {
+        height: 100%;
+        justify-content: space-between;
     }
 }
