--- a/src/styles/CreateAccount.scss
+++ b/src/styles/CreateAccount.scss
@@ -18,17 +18,20 @@
     display: none;
 }
 
+.title {
+    font-size: var(--lg);
+    margin-bottom: 36px;
+    text-align: start;
+}
+
 .form {
     display: flex;
     flex-direction: column;
 }
 
-.form a {
-    color: var(--hospital-green);
-    font-size: var(--sm);
-    text-align: center;
-    text-decoration: none;
-    margin-bottom: 52px;
+.form div {
+    display: flex;
+    flex-direction: column;
 }
 
 .label {
@@ -47,7 +50,9 @@
     margin-bottom: 12px;
 }
 
-.input-email {
+.input-name,
+.input-email,
+.input-password {
     margin-bottom: 22px;
 }
 
@@ -63,25 +68,18 @@
     height: 50px;
 }
 
-.secondary-button {
-    background-color: var(--white);
-    border-radius: 8px;
-    border: 1px solid var(--hospital-green);
-    color: var(--hospital-green);
-    width: 100%;
-    cursor: pointer;
-    font-size: var(--md);
-    font-weight: bold;
-    height: 50px;
-}
-
 .login-button {
     margin-top: 14px;
     margin-bottom: 30px;
 }
 
 @media (max-width: 640px) {
-    .logo {
-        display: block;
+    .form-container {
+        height: 100%;
+    }
+
+    .form {
+        height: 100%;
+        justify-content: space-between;
     }
 }
