--- a/src/styles/Account.scss
+++ b/src/styles/Account.scss
@@ -1,52 +1,52 @@
-.login {
+.login-ac {
     width: 100%;
     height: 100vh;
     display: grid;
     place-items: center;
 }
 
-.form-container {
+.form-container-ac {
     display: grid;
     grid-template-rows: auto 1fr auto;
     width: 300px;
 }
 
-.logo {
+.logo-ac {
     width: 150px;
     margin-bottom: 48px;
     justify-self: center;
     display: none;
 }
 
-.title {
+.title-ac {
     font-size: var(--lg);
     margin-bottom: 36px;
     text-align: start;
 }
 
-.form {
+.form-ac {
     display: flex;
     flex-direction: column;
 }
 
-.form div {
+.form-ac div {
     display: flex;
     flex-direction: column;
 }
 
-.label {
+.label-ac {
     font-size: var(--sm);
     font-weight: bold;
     margin-bottom: 4px;
 }
 
-.value {
+.value-ac {
     color: var(--very-light-pink);
     font-size: var(--md);
     margin: 8px 0 32px 0;
 }
 
-.secondary-button {
+.secondary-button-ac {
     background-color: var(--white);
     border-radius: 8px;
     border: 1px solid var(--hospital-green);
@@ -58,17 +58,17 @@
     height: 50px;
 }
 
-.login-button {
+.login-button-ac {
     margin-top: 14px;
     margin-bottom: 30px;
 }
 
 @media (max-width: 640px) {
-    .form-container {
+    .form-container-ac {
         height: 100%;
     }
 
-    .form {
+    .form-ac {
         height: 100%;
         justify-content: space-between;
     }
