--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,11 +3,14 @@ nav {
     justify-content: space-between;
     padding: 0 24px;
     border-bottom: 1px solid var(--very-light-pink);
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
 .menu {
     display: none;
 }
-.logo {
+.logoHeader {
     width: 100px;
 }
 .navbar-left ul,
