--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -1,29 +1,29 @@
-.login {
+.login-log {
     width: 100%;
     height: 100vh;
     display: grid;
     place-items: center;
 }
 
-.form-container {
+.form-container-log {
     display: grid;
     grid-template-rows: auto 1fr auto;
     width: 300px;
 }
 
-.logo {
+.logo-log {
     width: 150px;
     margin-bottom: 48px;
     justify-self: center;
     display: none;
 }
 
-.form {
+.form-log {
     display: flex;
     flex-direction: column;
 }
 
-.form a {
+.form-log a {
     color: var(--hospital-green);
     font-size: var(--sm);
     text-align: center;
@@ -31,13 +31,13 @@
     margin-bottom: 52px;
 }
 
-.label {
+.label-log {
     font-size: var(--sm);
     font-weight: bold;
     margin-bottom: 4px;
 }
 
-.input {
+.input-log {
     background-color: var(--text-input-field);
     border: none;
     border-radius: 8px;
@@ -47,11 +47,11 @@
     margin-bottom: 12px;
 }
 
-.input-email {
+.input-email-log {
     margin-bottom: 22px;
 }
 
-.primary-button {
+.primary-button-log {
     background-color: var(--hospital-green);
     border-radius: 8px;
     border: none;
@@ -63,7 +63,7 @@
     height: 50px;
 }
 
-.secondary-button {
+.secondary-button-log {
     background-color: var(--white);
     border-radius: 8px;
     border: 1px solid var(--hospital-green);
@@ -75,13 +75,13 @@
     height: 50px;
 }
 
-.login-button {
+.login-button-log {
     margin-top: 14px;
     margin-bottom: 30px;
 }
 
 @media (max-width: 640px) {
-    .logo {
+    .logo-log {
         display: block;
     }
 }
