--- a/src/styles/ProductDetail.scss
+++ b/src/styles/ProductDetail.scss
@@ -1,11 +1,11 @@
-.product-detail {
+.product-detail-pd {
     width: 360px;
     padding-bottom: 24px;
     position: absolute;
     right: 0;
 }
 
-.product-detail-close {
+.product-detail-close-pd {
     background: var(--white);
     width: 14px;
     height: 14px;
@@ -17,45 +17,43 @@
     border-radius: 50%;
 }
 
-.product-detail-close:hover {
+.product-detail-close-pd:hover {
     cursor: pointer;
 }
 
-.product-detail>img:nth-child(2) {
+.product-detail-pd>img:nth-child(2) {
     width: 100%;
     height: 360px;
     object-fit: cover;
     border-radius: 0 0 20px 20px;
 }
 
-.product-info {
+.product-info-pd {
     margin: 24px 24px 0 24px;
-    display: grid;
-    justify-content: space-between;
 }
 
-.product-info p:nth-child(1) {
+.product-info-pd p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 4px;
 }
 
-.product-info p:nth-child(2) {
+.product-info-pd p:nth-child(2) {
     color: var(--very-light-pink);
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 36px;
 }
 
-.product-info p:nth-child(3) {
+.product-info-pd p:nth-child(3) {
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-top: 0;
     margin-bottom: 36px;
 }
 
-.primary-button {
+.primary-button-pd {
     background-color: var(--hospital-green);
     border-radius: 8px;
     border: none;
@@ -67,14 +65,14 @@
     height: 50px;
 }
 
-.add-to-cart-button {
+.add-to-cart-button-pd {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 @media (max-width: 640px) {
-    .product-detail {
+    .product-detail-pd {
         width: 100%;
     }
 }
