--- a/src/styles/ShoppingCart.scss
+++ b/src/styles/ShoppingCart.scss
@@ -1,9 +1,17 @@
 .product-detail {
     width: 360px;
+    max-height: 400px;
+    overflow-y: scroll;
     padding: 24px;
     box-sizing: border-box;
     position: absolute;
     right: 0;
+    background-color: white;
+    top: 60px;
+    bottom: 0;
+    border-radius: 6px;
+    border: 1px solid #C7C7C7;
+    position: fixed;
 }
 
 .title-container {
