--- a/src/styles/MobileMenu.scss
+++ b/src/styles/MobileMenu.scss
@@ -1,34 +1,39 @@
-.mobile-menu {
+.mobile-menu-mb {
+    width: 100vw;
+    left: 0;
     padding: 24px;
+    background-color: white;
+    top: 60px;
+    position: fixed;
 }
 
-.mobile-menu a {
+.mobile-menu-mb a {
     text-decoration: none;
     color: var(--black);
     font-weight: bold;
     /* margin-bottom: 24px; */
 }
 
-.mobile-menu ul {
+.mobile-menu-mb ul {
     padding: 0;
     margin: 24px 0 0;
     list-style: none;
 }
 
-.mobile-menu ul:nth-child(1) {
+.mobile-menu-mb ul:nth-child(1) {
     border-bottom: 1px solid var(--very-light-pink);
 }
 
-.mobile-menu ul li {
+.mobile-menu-mb ul li {
     margin-bottom: 24px;
 }
 
-.email {
+.email-mb {
     font-size: var(--sm);
     font-weight: 300 !important;
 }
 
-.sign-out {
+.sign-out-mb {
     font-size: var(--sm);
     color: var(--hospital-green) !important;
 }
